Fix stepper label not hidding on narrow screens

--- a/ui/src/global.scss
+++ b/ui/src/global.scss
@@ -207,6 +207,6 @@
 
 @media (max-width: 420px) {
   .mat-step-label {
-    display: none;
+    display: none !important;
   }
 }
